--- a/RickyTools/LatteMods.RickyTools.csproj
+++ b/RickyTools/LatteMods.RickyTools.csproj
@@ -41,4 +41,9 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Modes\" />
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
