--- a/CustomItems/LatteMods.CustomItems.csproj
+++ b/CustomItems/LatteMods.CustomItems.csproj
@@ -1,9 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net48</TargetFramework>
-	 <LangVersion>12</LangVersion>
-	 <Platforms>AnyCPU;x64</Platforms>
+	<LangVersion>12</LangVersion>
+	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	<CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+	<OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
