--- a/RickyTools/LatteMods.RickyTools.csproj
+++ b/RickyTools/LatteMods.RickyTools.csproj
@@ -1,7 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
+	<OutputType>Library</OutputType>
+	<AssemblyName>$(ProjectName)</AssemblyName>
+	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	<CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+	<Version>1.0.0</Version>
+	<AssemblyVersion>7.1.1</AssemblyVersion>
+	<FileVersion>7.1.1</FileVersion>
 	<LangVersion>12</LangVersion>
 	<OutputType>Library</OutputType>
   </PropertyGroup>
